# vllm-otel

./: .dockerignore  .gitignore  PROMPT.md  README.md  pect 0ad4837c5fb5 \
amd-power-reader/: README.md  amd_power_reader.py  pyproject.toml  reset_gpu_core_freq.py  set_gpu_core_freq.py  test_amd_power_reader.py  test_reset_gpu_core_freq.py  test_set_gpu_core_freq.py
amd-power-reader/deamon/: README.md  __init__.py  amd_smi_power_client.py  amd_smi_power_daemon.py  amdsmi_power_service.py  get_amd_gpu_clockfreq.py  reset_amd_gpu_sclk.py  set_amd_gpu_clockfreq.py  test_amdsmi_power_service.py  test_get_amd_gpu_clockfreq.py  test_reset_amd_gpu_sclk.py  test_set_amd_gpu_clockfreq.py
apptainer/: .env.example  .gitignore  README.md  client.py  client_d.py  control_plane.py  pull_images.py  pyproject.toml  run_services.sh  server.py  server_config.toml
apptainer/logs/: slurm.273873.err  slurm.273873.out  slurm.274472.err  slurm.274472.out
apptainer/logs/old/: slurm.273571.err  slurm.273571.out  slurm.273582.err  slurm.273582.out  slurm.273610.err  slurm.273610.out  slurm.273613.err  slurm.273613.out  slurm.273619.err  slurm.273619.out  slurm.273621.err  slurm.273621.out  slurm.273624.err  slurm.273624.out  slurm.273626.err  slurm.273626.out  slurm.273627.err  slurm.273627.out  slurm.273751.err  slurm.273751.out  slurm.273760.err  slurm.273760.out
apptainer/run/: control_state.json  sbatch-20260227T203213Z-mi3008x-kimi_k2_5.sh
apptainer/run/old/: sbatch-20260226T171017Z-mi3008x-kimi_k2_5.sh  sbatch-20260226T171059Z-mi3008x-kimi_k2_5.sh  sbatch-20260226T173226Z-mi3001x-qwen3_coder_30b.sh  sbatch-20260226T183521Z-mi2508x-qwen3_coder_30b.sh  sbatch-20260226T210524Z-mi3008x-kimi_k2_5.sh
bench-powerctl-latency/: README.md  measure_freq_lock_latency.py
con-driver/: GATEWAY_LITE_API_KEY.md  METHOD.md  PROMPT.md  README.md  agent_model_endpoint_configuration.md  driver.py  pyproject.toml  run_con_driver.sh
con-driver/configs/: agent_defaults.toml  config.example.small.toml  config.example.toml
con-driver/src/con_driver/: __init__.py  __main__.py  cli.py  gateway_wrapper.py  models.py  parsing.py  patterns.py  runtime_resolution.py  scheduler.py  vllm_metrics_monitor.py
con-driver/src/con_driver/backends/: __init__.py  base.py
con-driver/src/con_driver/backends/harbor/: README.md  __init__.py  backend.py  runtime.py
con-driver/tests/: config.gateway.toml  test_cli_runtime_resolution.py  test_gateway_wrapper.py  test_scheduler_task_subset.py
con-driver/tests/output/manual-check/job-20260305T191558Z/: CON_DRIVER_OUTPUT
con-driver/tests/output/manual-check/job-20260305T191558Z/meta/: events.jsonl  results.json  run_manifest.json
con-driver/tests/output/manual-check/job-20260305T191558Z/post-processed/global/: trial-timing-summary.json
con-driver/tests/output/subset-check/d-20260305T185128Z/: CON_DRIVER_OUTPUT
con-driver/tests/output/subset-check/d-20260305T185128Z/meta/: events.jsonl  results.json  run_manifest.json
con-driver/tests/output/subset-check/d-20260305T185128Z_2/: CON_DRIVER_OUTPUT
con-driver/tests/output/subset-check/d-20260305T185128Z_2/meta/: events.jsonl  results.json  run_manifest.json
configs/: model_config.toml  port_profiles.toml
derived-single-plan/: README.md  generate_derived_single_plan.py
docker/: .env.example  Dockerfile  Dockerfile.rocm  README.md  README.rocm.md  docker-compose.yml  start_gateway.sh  vllm_entrypoint.sh
docs/: DOCKER_COMPOSE.md  FULL_WORKFLOW.md  REPLAY-PLAN.md  REPLAY.md  REPLAYER.md  VLLM_GATEWAY.md
dummy-mem/: README.md  occupy_gpu_memory.py
environment/: README.md  (+2 more)
freq-controller/: README.md  freq_controller.py  pyproject.toml  script-shared.toml
freq-controller-linespace-amd/: README.md  freq_controller_linespace_amd.py  pyproject.toml  script-shared.toml
freq-controller-linespace-amd/tests/: test_freq_controller_linespace_amd.py
freq-controller-linespace-instance/: README.md  freq_controller_linespace_instance.py  pyproject.toml  script-shared.toml
freq-controller-linespace-instance-slo/: README.md  freq_controller_linespace_instance_slo.py  pyproject.toml  script-shared.toml
freq-controller-linespace-instance-slo/tests/: test_freq_controller_linespace_instance_slo.py
freq-controller-linespace-instance/tests/: test_freq_controller_linespace_instance.py
freq-controller-linespace-multi/: README.md  freq_controller_linespace_multi.py  pyproject.toml
freq-controller-linespace-multi/tests/: test_freq_controller_linespace_multi.py
freq-controller-linespace-slo/: README.md  freq_controller_linespace_slo.py  pyproject.toml  script-shared.toml
freq-controller-linespace-slo/tests/: test_freq_controller_linespace_slo.py
freq-controller/tests/: test_freq_controller.py
gateway/: README.md  __main__.py  app.py  cli.py  config.toml  port_profiles.py  pyproject.toml  reasoning_response_parser.py  requirements.txt  run.py  runtime_config.py
gateway/test/: test_gateway.py
gateway_ctx/: DIFFERENT_POLICY.md  README.ctx-aware-mode.md  README.md  README.slo-aware-model.md  SLO_AWARE.md  __init__.py  __main__.py  app.py  cli.py  config.example.toml  model_configs.py  plan.ctx-aware-mode.md  plan.slo-aware-mode.md  pyproject.toml  reasoning_response_parser.py  reasoning_runtime.py  run.py  runtime_config.py
gateway_ctx/test/: test_gateway.py
gateway_lite/: LOGGING_WITH_OPENAI.md  README.md  __init__.py  __main__.py  app.py  cli.py  config.example.toml  config.toml  pyproject.toml  run.py  runtime_config.py
gateway_lite/test/: test_cli.py  test_gateway.py
servers/servers-docker/: PROMPT.md  README.md  client.py  docker-compose.yml  launch_profiles.toml  pyproject.toml  service_images.toml
servers/servers-docker-multi/: README.md  client.py  pyproject.toml
servers/servers-docker-multi/tests/: test_client.py
servers/servers-docker/tests/: test_gateway_ctx_option.py  test_image_override.py  test_lmcache.py  test_stop_services.py
zeus-power-reader/: README.md  pyproject.toml  reset_gpu_core_freq.py  reset_gpu_mem_freq.py  set_gpu_core_freq.py  set_gpu_mem_freq.py  zeus_power_reader.py
(+849 files in other folders)
