[project]
name = "gateway_lite"
version = "0.1.0"
description = "Lightweight vLLM Gateway without Jaeger/OpenTelemetry"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
gateway-lite = "gateway_lite.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gateway_lite*"]
