[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-otel-docker-control-multi"
version = "0.1.0"
description = "Local Docker multi-backend control plane for vLLM + Jaeger + gateway_multi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
]

[tool.setuptools]
py-modules = ["client"]
